test/e2e/testdata/admission/mutate-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "mutate.kluster.aniruddha.dev"
webhooks:
  - matchPolicy: Equivalent
    admissionReviewVersions:
      - v1
      - v1beta1
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - "v1"
        operations:
          - "CREATE"
        resources:
          - "pods"
        scope: "Namespaced"
    clientConfig:
      service:
        path: "/mutate/pod"
        namespace: "e2e-ns"
        name: "validation-kontroller"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ2RENDQTZTZ0F3SUJBZ0lVSUZ2RXBlL3hwWGh1TFhobjdBUnIvVG5FYWd3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1h6RUxNQWtHQTFVRUJoTUNTVTR4Q3pBSkJnTlZCQWdNQWxkQ01SQXdEZ1lEVlFRSERBZExiMnhyWVhSaApNUTB3Q3dZRFZRUUtEQVJUWld4bU1Rd3dDZ1lEVlFRTERBTkVaWFl4RkRBU0JnTlZCQU1NQzNkM2R5NXJPSE11ClkyOXRNQjRYRFRJek1ETXhOVEE0TVRZek5sb1hEVEkwTURNeE5EQTRNVFl6Tmxvd1h6RUxNQWtHQTFVRUJoTUMKU1U0eEN6QUpCZ05WQkFnTUFsZENNUkF3RGdZRFZRUUhEQWRMYjJ4cllYUmhNUTB3Q3dZRFZRUUtEQVJUWld4bQpNUXd3Q2dZRFZ [...]
    name: "mutate.kluster.aniruddha.dev"
    sideEffects: None
    timeoutSeconds: 5
